--- a/snippets/app/src/main/AndroidManifest.xml
+++ b/snippets/app/src/main/AndroidManifest.xml
@@ -31,6 +31,14 @@
         android:name="com.google.android.geo.API_KEY"
         android:value="${MAPS_API_KEY}" />
     <!-- [END maps_android_api_key_security_manifest_metadata] -->
+
+    <activity android:name=".MapsActivity"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
   </application>
 
 </manifest>
